Fix alignment of work history content on mobile.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -80,6 +80,10 @@ a:hover {
   text-decoration: none;
 }
 
+.font-italic {
+  margin-top: 0.4rem;
+}
+
 #download-cv-button {
   margin-left: 0.5rem;
   color: #77ccdf;
