--- a/static/scss/helpers/_fonts.scss
+++ b/static/scss/helpers/_fonts.scss
@@ -78,3 +78,7 @@ a:hover {
     color: $color1-darker;
     text-decoration: none;
 }
+
+.font-italic {
+    margin-top: 0.4rem;
+}
